<resources>
    <string name="app_name">FinancialCalc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="other">Others</string>
    <string name="about">Info</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAJNBZnaZtHLLuehpSBehBD7NGWcDyd6do</string>
    <string name="browser_key">AIzaSyBNpeNbZ0UndHJqRP80PB5L-9glT1-pAAk</string>
    <string name="amount">Amount</string>
    <string name="interest">Interest</string>
    <string name="commision">Commision</string>
    <string name="period">Period</string>
    <string name="installment_type">Installment Type</string>
    <string name="equal">Equal</string>
    <string name="decreasing">Decreasing</string>
    <string name="calculate">Calculate</string>
    <string name="equal_installment">Equal Installment</string>
    <string name="credit_amount">Amount of credit:</string>
    <string name="credit_costs">Credit Costs:</string>
    <string name="sum_of_interest">Sum of Interest</string>
    <string name="bank_commision">Bank Commission:</string>
    <string name="total_loan_amount">Total Loan Amount:</string>
    <string name="credit_intallment">Credit Installment:</string>
    <string name="last_installment">Last Intallment:</string>
    <string name="legend">Legend</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="loans">Loans</string>
    <string name="installment_rate">Installment Rate</string>
    <string name="decreasing_installment">Decreasing Installment</string>
    <string name="first_installment">First Installement</string>
    <string name="capitalization">Capitalization</string>
    <string name="year">Year</string>
    <string name="days_360">360 days</string>
    <string name="days_365">365 days</string>
    <string name="investment_amount">Investment Amount</string>
    <string name="results">Results</string>
    <string name="total_amount">Total Amount</string>
    <string name="profit_brutto">Profit Brutto</string>
    <string name="profit_netto">Profit Netto</string>
    <string name="tax">Tax</string>
    <string name="profit">Profit</string>
    <string name="one_day">1 Day</string>
    <string name="days">Days</string>
    <string name="one_week">1 week</string>
    <string name="one_month">1 month</string>
    <string name="quarter">Quarter</string>
    <string name="half_year">Half a Year</string>
    <string name="end_of_period">End of Period</string>
    <string name="investments">Investments</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="leasing_cost">Leasing cost</string>
    <string name="self_deposit">Self Deposit</string>
    <string name="final_buyout">Final Buyout</string>
    <string name="margin">Margin</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="leasing_amount">Leasing Amount</string>
    <string name="leasings">Leasings</string>
    <string name="select_senders_bank">Select the Sender\'s Bank</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_recipients_bank">Select the Recipient\'s Bank</string>
    <string name="check">Check</string>
    <string name="first_choose_banks">First Select Banks</string>
    <string name="transfer_immediately">The Transfer Should Arrive Immediately</string>
    <string name="your_transfer_will_come_on">Your transfer will come on </string>
    <string name="at"> at </string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="transfers">Transfers</string>
    <string name="language_pl_en">en</string>
    <string name="nearby_atms">Nearby ATMs</string>
    <string name="show_atms">Show ATMs</string>
    <string name="enter_data">Enter data first!</string>
    <string name="interest_amount">Interest</string>
    <string name="app_made_by">Application made by Ryszard Wadowski</string>
    <string name="financial_calculator">Financial Calculator</string>
</resources>
